Weiter die Windows mit NumberField angepasst...