@@ -42,49 +42,49 @@ public class BoxWindow extends Stage {
 
     private final Label lbf = new Label("lbf");
 
-    private final TextField lbfx = new TextField("-0.5");
-    private final TextField lbfy = new TextField("0");
-    private final TextField lbfz = new TextField("-0.5");
+    private final NumberField lbfx = new NumberField("-0.5");
+    private final NumberField lbfy = new NumberField("0");
+    private final NumberField lbfz = new NumberField("-0.5");
 
     private final Label run = new Label("run");
 
-    private final TextField runx = new TextField("0.5");
-    private final TextField runy = new TextField("1");
-    private final TextField runz = new TextField("0.5");
+    private final NumberField runx = new NumberField("0.5");
+    private final NumberField runy = new NumberField("1");
+    private final NumberField runz = new NumberField("0.5");
 
 
     //---------------------- SINGLE ----------------------//
     private  final Label single = new Label("Color");
 
-    private final TextField singleCr = new TextField("0");
-    private final TextField singleCg = new TextField("0");
-    private final TextField singleCb = new TextField("1");
+    private final NumberField singleCr = new NumberField("0");
+    private final NumberField singleCg = new NumberField("0");
+    private final NumberField singleCb = new NumberField("1");
 
 
     //------------------- PHONG --------------------------//
 
     private final Label diffCol = new Label("Diffuse");
 
-    private final TextField diffuser = new TextField("1");
-    private final TextField diffuseg = new TextField("0");
-    private final TextField diffuseb = new TextField("0");
+    private final NumberField diffuser = new NumberField("1");
+    private final NumberField diffuseg = new NumberField("0");
+    private final NumberField diffuseb = new NumberField("0");
 
     private final Label specCol  = new Label("Specular");
 
-    private final TextField specularr = new TextField("1");
-    private final TextField specularg = new TextField("1");
-    private final TextField specularb = new TextField("1");
+    private final NumberField specularr = new NumberField("1");
+    private final NumberField specularg = new NumberField("1");
+    private final NumberField specularb = new NumberField("1");
 
     private final Label exp = new Label("Exponennt");
 
-    private final TextField exponennt = new TextField("64");
+    private final NumberField exponennt = new NumberField("64");
 
     //------------------- LAMBERT ---------------------------//
     private final Label lamCol = new Label("Lambert");
 
-    private final TextField lamr = new TextField("1");
-    private final TextField lamg = new TextField("0");
-    private final TextField lamb = new TextField("0");
+    private final NumberField lamr = new NumberField("1");
+    private final NumberField lamg = new NumberField("0");
+    private final NumberField lamb = new NumberField("0");
 
     public BoxWindow(){
 
@@ -123,31 +123,6 @@ public class BoxWindow extends Stage {
 
         grid.setVgap(5);
         grid.setHgap(5);
-
-        // Maximal size of the fields
-        lbfx.setMaxSize(50, 10);
-        lbfy.setMaxSize(50, 10);
-        lbfz.setMaxSize(50, 10);
-
-        runx.setMaxSize(50, 10);
-        runy.setMaxSize(50, 10);
-        runz.setMaxSize(50, 10);
-        exponennt.setMaxSize(50,10);
-
-        diffuser.setMaxSize(50, 10);
-        diffuseg.setMaxSize(50, 10);
-        diffuseb.setMaxSize(50, 10);
-        specularr.setMaxSize(50, 10);
-        specularg.setMaxSize(50, 10);
-        specularb.setMaxSize(50, 10);
-
-        lamr.setMaxSize(50, 10);
-        lamg.setMaxSize(50, 10);
-        lamb.setMaxSize(50, 10);
-
-        singleCr.setMaxSize(50, 10);
-        singleCg.setMaxSize(50, 10);
-        singleCb.setMaxSize(50, 10);
 
         //--------------------- EVENTS ------------------------------//
         add.setOnAction(e->addBox());
@@ -258,36 +233,21 @@ public class BoxWindow extends Stage {
 
     private void addBox(Toggle selectedToggle) {
 
-        Point3 lb = new Point3(Double.valueOf(lbfx.getText()), Double.valueOf(lbfy.getText()),
-                Double.valueOf(lbfz.getText()));
-
-        Point3 ru = new Point3(Double.valueOf(runx.getText()), Double.valueOf(runy.getText()),
-                Double.valueOf(runz.getText()));
+        Point3 lb = new Point3(lbfx.getNumber(),lbfy.getNumber(), lbfz.getNumber());
+        Point3 ru = new Point3(runx.getNumber(), runy.getNumber(), runz.getNumber());
 
         //Single
-        Color singleCol = new Color(Double.valueOf(singleCr.getText()), Double.valueOf(singleCg.getText()),
-                Double.valueOf(singleCb.getText()));
-
+        Color singleCol = new Color(singleCr.getNumber(), singleCg.getNumber(), singleCb.getNumber());
         SingleColorMaterial sinCol = new SingleColorMaterial(singleCol);
 
         //Phong
-
-        Color diffCol = new Color(Double.valueOf(diffuser.getText()), Double.valueOf(diffuseg.getText()),
-                Double.valueOf(diffuseb.getText()));
-
-        Color specCol = new Color(Double.valueOf(specularr.getText()), Double.valueOf(specularg.getText()),
-                Double.valueOf(specularb.getText()));
-
-        Integer exp = new Integer(exponennt.getText());
-
+        Color diffCol = new Color(diffuser.getNumber(), diffuseg.getNumber(), diffuseb.getNumber());
+        Color specCol = new Color(specularr.getNumber(), specularg.getNumber(), specularb.getNumber());
+        Integer exp = new Integer((int)exponennt.getNumber());
         PhongMaterial phongMat = new PhongMaterial(diffCol, specCol, exp);
 
         //Lambert
-
-        Color lamColor = new Color(Double.valueOf(lamr.getText()), Double.valueOf(lamg.getText()),
-                Double.valueOf(lamb.getText()));
-
-
+        Color lamColor = new Color(lamr.getNumber(), lamg.getNumber(),lamb.getNumber());
         LambertMaterial lamMat = new LambertMaterial(lamColor);
 
         if (selectedToggle == togSingle) {
